# rollit

./: .gitignore  README.md  pyproject.toml  requirements.txt
rollit/: __main__.py  main.py  messages.py  pass_generator.py  rollit.py
src/rollit/: __main__.py  pass_generator.py
tests/: test_helpers.py
